# driving-cli-tool

./: .editorconfig  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
driving/: __init__.py  cli.py
driving/commands/: __init__.py  framework.py  ide.py  link.py  repo.py  skills.py  update.py
driving/models/: framework.py
driving/utils/: config.py  git_helper.py  logger.py
scripts/: build.sh  format-code.sh  setup-dev.sh
tests/: conftest.py  test_build_script.sh  test_config.py  test_framework.py  test_git_helper.py
